# controllers/meds.js
@@ -3,8 +3,8 @@ const ObjectId = require('mongodb').ObjectId;
 
 const getAllMeds = async (req, res, next) => {
   // #swagger.tags = ['Meds']
-  // #swagger.description = 'Endpoint to get all contacts'
-  const result = await mongodb.getDb().db().collection('meds').find();
+  // #swagger.description = 'Endpoint to get all MEDS contacts'
+  const result = await mongodb.getDb().db().collection('Meds').find();
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists);
@@ -17,11 +17,24 @@ const updateMeds = async (req, res) => {
   const userId = new ObjectId(req.params.id);
   // be aware of updateOne if you only want to update specific fields
   const contact = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+    
+    Name: req.body.Name,
+    FillDate: req.body.FillDate,
+    Prescription: req.body.Prescription,
+    Rx: req.body.Rx,
+    Qty: req.body.Qty,
+    Prescriber: req.body.Prescriber,
+    Pharmacist: req.body.Pharmacist,
+    NDC: req.body.NDC,
+    Insurance: req.body.Insurance,
+    ClaimReference: req.body.Claim,
+    Price: req.body.Price
+
+    // firstName: req.body.firstName,
+    // lastName: req.body.lastName,
+    // email: req.body.email,
+    // favoriteColor: req.body.favoriteColor,
+    // birthday: req.body.birthday
   };
   const response = await mongodb
     .getDb()
@@ -65,11 +78,17 @@ const createMeds = async (req, res) => {
   // #swagger.description = 'Endpoint to create a Meds'
   try {
     const meds = {
-      Name: req.body.firstName,
-      lastName: req.body.lastName,
-      email: req.body.email,
-      favoriteColor: req.body.favoriteColor,
-      birthday: req.body.birthday
+      Name: req.body.Name,
+      FillDate: req.body.FillDate,
+      Prescription: req.body.Prescription,
+      Rx: req.body.Rx,
+      Qty: req.body.Qty,
+      Prescriber: req.body.Prescriber,
+      Pharmacist: req.body.Pharmacist,
+      NDC: req.body.NDC,
+      Insurance: req.body.Insurance,
+      ClaimReference: req.body.Claim,
+      Price: req.body.Price
     };
     
     const response = await mongodb
