# middleware/validate.js
@@ -1,0 +1,40 @@
+const validator = require('../helpers/validate');
+
+const saveContact = (req, res, next) => {
+  const validationRule = {
+
+    Name: 'required|string',
+    FillDate: 'required|string',
+    Prescription: 'required|string',
+    Rx : 'required|string',
+    Qty: 'required|string',
+    Prescriber: 'required|string',
+    Pharmacist: 'required|string',
+    NDC: 'required|string',
+    Insurance: 'required|string',
+    ClaimReference: 'string',
+    Price: 'required|string'
+
+
+    // firstName: 'required|string',
+    // lastName: 'required|string',
+    // email: 'required|email',
+    // favoriteColor: 'required|string',
+    // birthday: 'string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+module.exports = {
+  saveContact
+};
