# swagger-output.json
@@ -184,16 +184,6 @@
         }
       }
     },
-    "/meds": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/contacts/": {
       "get": {
         "tags": [
@@ -359,7 +349,7 @@
         "tags": [
           "Meds"
         ],
-        "description": "Endpoint to get all contacts",
+        "description": "Endpoint to get all MEDS contacts",
         "produces": [
           "application/json"
         ],
@@ -370,17 +360,76 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Meds"
+        ],
+        "description": "Endpoint to create a Meds",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Name": {
+                  "example": "any"
+                },
+                "FillDate": {
+                  "example": "any"
+                },
+                "Prescription": {
+                  "example": "any"
+                },
+                "Rx": {
+                  "example": "any"
+                },
+                "Qty": {
+                  "example": "any"
+                },
+                "Prescriber": {
+                  "example": "any"
+                },
+                "Pharmacist": {
+                  "example": "any"
+                },
+                "NDC": {
+                  "example": "any"
+                },
+                "Insurance": {
+                  "example": "any"
+                },
+                "Claim": {
+                  "example": "any"
+                },
+                "Price": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "201": {
+            "description": "Created"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/meds/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Meds"
+        ],
+        "description": "Endpoint to get one Meds",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -390,40 +439,148 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Meds"
+        ],
+        "description": "Endpoint to create a Meds",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Name": {
+                  "example": "any"
+                },
+                "FillDate": {
+                  "example": "any"
+                },
+                "Prescription": {
+                  "example": "any"
+                },
+                "Rx": {
+                  "example": "any"
+                },
+                "Qty": {
+                  "example": "any"
+                },
+                "Prescriber": {
+                  "example": "any"
+                },
+                "Pharmacist": {
+                  "example": "any"
+                },
+                "NDC": {
+                  "example": "any"
+                },
+                "Insurance": {
+                  "example": "any"
+                },
+                "Claim": {
+                  "example": "any"
+                },
+                "Price": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "201": {
+            "description": "Created"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Meds"
+        ],
+        "description": "Endpoint to create a Meds",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Name": {
+                  "example": "any"
+                },
+                "FillDate": {
+                  "example": "any"
+                },
+                "Prescription": {
+                  "example": "any"
+                },
+                "Rx": {
+                  "example": "any"
+                },
+                "Qty": {
+                  "example": "any"
+                },
+                "Prescriber": {
+                  "example": "any"
+                },
+                "Pharmacist": {
+                  "example": "any"
+                },
+                "NDC": {
+                  "example": "any"
+                },
+                "Insurance": {
+                  "example": "any"
+                },
+                "Claim": {
+                  "example": "any"
+                },
+                "Price": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -452,6 +609,10 @@
         "birthday": {
           "type": "string",
           "example": "1990-01-01"
+        },
+        "Name": {
+          "type": "string",
+          "example": "Rune"
         }
       }
     }
